--- a/about.html
+++ b/about.html
@@ -39,23 +39,28 @@
     </ul>
 
     <h2 id="leadership">Leadership</h2>
-    <div class="leaders">
+    <!-- Use grid so order is clear: 3 up top, 2 below -->
+    <div class="leaders grid grid--3">
       <div class="leader card">
         <h3>President (Steven Wang)</h3>
         <p>Leads strategy, partnerships, and weekly programming.</p>
       </div>
-      <div class="leader card">
-        <h3>Secretary (Vivian)</h3>
-        <p>Manages communications, notes, and organizational records.</p>
-      </div>
+
       <div class="leader card">
         <h3>Vice President</h3>
         <p>Coordinates events and supports the president in strategic decisions.</p>
       </div>
+
+      <div class="leader card">
+        <h3>Secretary (Vivian)</h3>
+        <p>Manages communications, notes, and organizational records.</p>
+      </div>
+
       <div class="leader card">
         <h3>Treasurer</h3>
         <p>Handles budgeting, fundraising, and financial transparency for the club.</p>
       </div>
+
       <div class="leader card">
         <h3>Education Lead</h3>
         <p>Designs curriculum, workshops, and mentorship opportunities.</p>
