--- a/about.html
+++ b/about.html
@@ -39,29 +39,29 @@
     </ul>
 
     <h2 id="leadership">Leadership</h2>
-    <!-- Use grid so order is clear: 3 up top, 2 below -->
-    <div class="leaders grid grid--3">
+    <div class="leaders">
       <div class="leader card">
+        <img src="assets/images/president.jpg" alt="President Photo" class="leader-photo">
         <h3>President (Steven Wang)</h3>
         <p>Leads strategy, partnerships, and weekly programming.</p>
       </div>
-
       <div class="leader card">
+        <img src="assets/images/vice-president.jpg" alt="Vice President Photo" class="leader-photo">
         <h3>Vice President</h3>
         <p>Coordinates events and supports the president in strategic decisions.</p>
       </div>
-
       <div class="leader card">
+        <img src="assets/images/secretary.jpg" alt="Secretary Photo" class="leader-photo">
         <h3>Secretary (Vivian)</h3>
         <p>Manages communications, notes, and organizational records.</p>
       </div>
-
       <div class="leader card">
+        <img src="assets/images/treasurer.jpg" alt="Treasurer Photo" class="leader-photo">
         <h3>Treasurer</h3>
         <p>Handles budgeting, fundraising, and financial transparency for the club.</p>
       </div>
-
       <div class="leader card">
+        <img src="assets/images/education-lead.jpg" alt="Education Lead Photo" class="leader-photo">
         <h3>Education Lead</h3>
         <p>Designs curriculum, workshops, and mentorship opportunities.</p>
       </div>
