--- a/index.html
+++ b/index.html
@@ -39,13 +39,12 @@
       </div>
     </section>
 
-    <!-- Slideshow (leave blank; you can drop images into assets/images and reference them) -->
+    <!-- Slideshow -->
     <section class="slideshow" aria-label="Club Highlights Slideshow">
       <div class="slideshow__viewport">
-        <!-- Place your <img> slides here. Example:
-        <img src="assets/images/slide-1.jpg" alt="Workshop in progress">
-        <img src="assets/images/slide-2.jpg" alt="Members collaborating">
-        -->
+        <img src="assets/images/slide-1.png" alt="Portfolio screenshot">
+        <img src="assets/images/slide-2.png" alt="S&P 500 chart">
+        <img src="assets/images/slide-3.png" alt="TradingView candlestick chart">
       </div>
       <div class="slideshow__controls" aria-hidden="true">
         <button class="prev" aria-label="Previous slide">‹</button>
