--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- Slideshow -->
     <section class="slideshow" aria-label="Club Highlights Slideshow">
       <div class="slideshow__viewport">
-        <img src="assets/images/slide-1.png" alt="Portfolio screenshot">
+        <img src="assets/images/slide-1.png" alt="Portfolio screenshot" class="active">
         <img src="assets/images/slide-2.png" alt="S&P 500 chart">
         <img src="assets/images/slide-3.png" alt="TradingView candlestick chart">
       </div>
