--- a/about.html
+++ b/about.html
@@ -65,6 +65,11 @@
         <h3>Education Lead</h3>
         <p>Designs curriculum, workshops, and mentorship opportunities.</p>
       </div>
+      <div class="leader card">
+        <img src="assets/images/public-relations.jpg" alt="Public Relations Photo" class="leader-photo">
+        <h3>Public Relations</h3>
+        <p>Builds the club’s presence on campus and online by managing social media, promoting events, and fostering connections with other student organizations.</p>
+      </div>
     </div>
   </main>
 
