--- a/about.html
+++ b/about.html
@@ -39,38 +39,59 @@
     </ul>
 
     <h2 id="leadership">Leadership</h2>
-    <div class="leaders">
-      <div class="leader card">
+
+    <!-- Leaders Grid -->
+    <section class="leaders-grid">
+      <!-- Featured row (2 big cards) -->
+      <article class="leader card leader--featured">
         <img src="assets/images/president.jpg" alt="President Photo" class="leader-photo">
-        <h3>President (Steven Wang)</h3>
-        <p>Leads strategy, partnerships, and weekly programming.</p>
-      </div>
-      <div class="leader card">
+        <div class="leader-body">
+          <h3>President (Steven Wang)</h3>
+          <p>Leads strategy, partnerships, and weekly programming.</p>
+        </div>
+      </article>
+
+      <article class="leader card leader--featured">
         <img src="assets/images/vice-president.jpg" alt="Vice President Photo" class="leader-photo">
-        <h3>Vice President</h3>
-        <p>Coordinates events and supports the president in strategic decisions.</p>
-      </div>
-      <div class="leader card">
-        <img src="assets/images/secretary.jpg" alt="Secretary Photo" class="leader-photo">
-        <h3>Secretary (Vivian)</h3>
-        <p>Manages communications, notes, and organizational records.</p>
-      </div>
-      <div class="leader card">
-        <img src="assets/images/treasurer.jpg" alt="Treasurer Photo" class="leader-photo">
-        <h3>Treasurer</h3>
-        <p>Handles budgeting, fundraising, and financial transparency for the club.</p>
-      </div>
-      <div class="leader card">
-        <img src="assets/images/education-lead.jpg" alt="Education Lead Photo" class="leader-photo">
-        <h3>Education Lead</h3>
-        <p>Designs curriculum, workshops, and mentorship opportunities.</p>
-      </div>
-      <div class="leader card">
+        <div class="leader-body">
+          <h3>Vice President</h3>
+          <p>Coordinates events and supports the president in strategic decisions.</p>
+        </div>
+      </article>
+
+      <!-- Standard cards (3 per row) -->
+      <article class="leader card">
         <img src="assets/images/public-relations.jpg" alt="Public Relations Photo" class="leader-photo">
-        <h3>Public Relations</h3>
-        <p>Builds the club’s presence on campus and online by managing social media, promoting events, and fostering connections with other student organizations.</p>
-      </div>
-    </div>
+        <div class="leader-body">
+          <h3>Public Relations</h3>
+          <p>Builds the club’s presence on campus and online by managing social media, promoting events, and fostering connections with other student organizations.</p>
+        </div>
+      </article>
+
+      <article class="leader card">
+        <img src="assets/images/secretary.jpg" alt="Secretary Photo" class="leader-photo">
+        <div class="leader-body">
+          <h3>Secretary (Vivian)</h3>
+          <p>Manages communications, notes, and organizational records.</p>
+        </div>
+      </article>
+
+      <article class="leader card">
+        <img src="assets/images/treasurer.jpg" alt="Treasurer Photo" class="leader-photo">
+        <div class="leader-body">
+          <h3>Treasurer</h3>
+          <p>Handles budgeting, fundraising, and financial transparency for the club.</p>
+        </div>
+      </article>
+
+      <article class="leader card">
+        <img src="assets/images/education-lead.jpg" alt="Education Lead Photo" class="leader-photo">
+        <div class="leader-body">
+          <h3>Education Lead</h3>
+          <p>Designs curriculum, workshops, and mentorship opportunities.</p>
+        </div>
+      </article>
+    </section>
   </main>
 
   <footer class="site-footer">
