--- a/about.html
+++ b/about.html
@@ -40,10 +40,9 @@
 
     <h2 id="leadership">Leadership</h2>
 
-    <!-- Leaders Grid -->
-    <section class="leaders-grid">
-      <!-- Featured row (2 big cards) -->
-      <article class="leader card leader--featured">
+    <!-- FIRST ROW: President + Vice President (2-up, large) -->
+    <section class="leaders-featured">
+      <article class="leader card leader--wide">
         <img src="assets/images/president.jpg" alt="President Photo" class="leader-photo">
         <div class="leader-body">
           <h3>President (Steven Wang)</h3>
@@ -51,15 +50,17 @@
         </div>
       </article>
 
-      <article class="leader card leader--featured">
+      <article class="leader card leader--wide">
         <img src="assets/images/vice-president.jpg" alt="Vice President Photo" class="leader-photo">
         <div class="leader-body">
           <h3>Vice President</h3>
           <p>Coordinates events and supports the president in strategic decisions.</p>
         </div>
       </article>
+    </section>
 
-      <!-- Standard cards (3 per row) -->
+    <!-- BELOW: all other roles (3-up on desktop) -->
+    <section class="leaders-others">
       <article class="leader card">
         <img src="assets/images/public-relations.jpg" alt="Public Relations Photo" class="leader-photo">
         <div class="leader-body">
