--- a/about.html
+++ b/about.html
@@ -44,10 +44,10 @@
 
     <h2>Leadership</h2>
 
-    <!-- Featured row: President + Vice President (2 wide cards) -->
+    <!-- Featured row: President + Vice President -->
     <div class="leaders-featured">
       <div class="leader card leader--wide">
-        <img src="assets/images/leadership-president.jpg" alt="President" class="leader-photo" />
+        <img src="assets/images/president.jpg" alt="President" class="leader-photo" />
         <div class="leader-body">
           <h3>President</h3>
           <p>Sets vision and standards, oversees operations, and represents the org with partners and the university.</p>
@@ -55,7 +55,7 @@
       </div>
 
       <div class="leader card leader--wide">
-        <img src="assets/images/leadership-vp.jpg" alt="Vice President" class="leader-photo" />
+        <img src="assets/images/blank.png" alt="Vice President" class="leader-photo" />
         <div class="leader-body">
           <h3>Vice President</h3>
           <p>Drives execution of initiatives, manages internal teams, and ensures consistency across programs.</p>
@@ -63,10 +63,10 @@
       </div>
     </div>
 
-    <!-- Everyone else: 3 cards per row (with PR above Secretary) -->
+    <!-- Everyone else: 3 cards per row -->
     <div class="leaders-others">
       <div class="leader card">
-        <img src="assets/images/leadership-pr.jpg" alt="Public Relations" class="leader-photo" />
+        <img src="assets/images/public-relations.jpg" alt="Public Relations" class="leader-photo" />
         <div class="leader-body">
           <h3>Public Relations</h3>
           <p>Leads community outreach, social/content, and partnerships. Owns messaging and external communications.</p>
@@ -74,7 +74,7 @@
       </div>
 
       <div class="leader card">
-        <img src="assets/images/leadership-secretary.jpg" alt="Secretary" class="leader-photo" />
+        <img src="assets/images/blank.png" alt="Secretary" class="leader-photo" />
         <div class="leader-body">
           <h3>Secretary</h3>
           <p>Keeps docs, meeting notes, and schedules organized. Maintains member records and compliance.</p>
@@ -82,7 +82,7 @@
       </div>
 
       <div class="leader card">
-        <img src="assets/images/leadership-treasurer.jpg" alt="Treasurer" class="leader-photo" />
+        <img src="assets/images/blank.png" alt="Treasurer" class="leader-photo" />
         <div class="leader-body">
           <h3>Treasurer</h3>
           <p>Budgets events, manages reimbursements, and tracks dues/sponsorships with transparent reporting.</p>
@@ -90,7 +90,7 @@
       </div>
 
       <div class="leader card">
-        <img src="assets/images/leadership-education.jpg" alt="Education Lead" class="leader-photo" />
+        <img src="assets/images/blank.png" alt="Education Lead" class="leader-photo" />
         <div class="leader-body">
           <h3>Education Lead</h3>
           <p>Designs workshops, bootcamps, and study tracks (risk, journaling, setups, platform basics).</p>
@@ -98,7 +98,7 @@
       </div>
 
       <div class="leader card">
-        <img src="assets/images/leadership-events.jpg" alt="Events Coordinator" class="leader-photo" />
+        <img src="assets/images/blank.png" alt="Events Coordinator" class="leader-photo" />
         <div class="leader-body">
           <h3>Events Coordinator</h3>
           <p>Plans speakers, challenge weeks, and collabs. Handles logistics and day-of execution.</p>
@@ -106,7 +106,7 @@
       </div>
 
       <div class="leader card">
-        <img src="assets/images/leadership-risk.jpg" alt="Risk & Analytics" class="leader-photo" />
+        <img src="assets/images/blank.png" alt="Risk & Analytics" class="leader-photo" />
         <div class="leader-body">
           <h3>Risk &amp; Analytics</h3>
           <p>Builds dashboards, journaling templates, and post-trade reviews to enforce process and edge.</p>
@@ -127,7 +127,6 @@
 
   <script src="js/main.js"></script>
   <script>
-    // fallback year if main.js doesn't set it
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
 </body>
