--- a/about.html
+++ b/about.html
@@ -29,17 +29,16 @@
     <h1>About OSU Day Traders</h1>
     <p>
       We’re a student-led community focused on building consistent, disciplined trading processes.
-      Members get hands-on practice, risk management frameworks, and a place to share playbooks and
-      debriefs. Whether you’re brand new or experienced, you’ll find structure, accountability, and
-      people who take the craft seriously.
+      Members get hands-on practice, structured playbooks, and accountability partners. Whether you’re
+      brand new or experienced, you’ll find people who take the craft seriously.
     </p>
 
     <h2>What We Do</h2>
     <ul class="checklist">
-      <li>Daily watchlists, levels, and post-market debriefs</li>
+      <li>Daily watchlists, levels, and post-market reviews</li>
       <li>Risk management and journaling systems</li>
-      <li>Guest talks, workshops, and challenge weeks</li>
-      <li>Collaborative research on strategy edges</li>
+      <li>Guest speakers, workshops, and challenge weeks</li>
+      <li>Collaborative strategy research</li>
     </ul>
 
     <h2>Leadership</h2>
@@ -49,67 +48,85 @@
       <div class="leader card leader--wide">
         <img src="assets/images/president.jpg" alt="President" class="leader-photo" />
         <div class="leader-body">
-          <h3>President</h3>
-          <p>Sets vision and standards, oversees operations, and represents the org with partners and the university.</p>
+          <div class="leader-title">
+            <h3>President</h3>
+          </div>
+          <p>Sets vision, standards, and partnerships. Oversees operations and represents the org.</p>
         </div>
       </div>
 
       <div class="leader card leader--wide">
         <img src="assets/images/blank.png" alt="Vice President" class="leader-photo" />
         <div class="leader-body">
-          <h3>Vice President</h3>
-          <p>Drives execution of initiatives, manages internal teams, and ensures consistency across programs.</p>
+          <div class="leader-title">
+            <h3>Vice President</h3>
+          </div>
+          <p>Turns strategy into action, leads internal teams, and drives program consistency.</p>
         </div>
       </div>
     </div>
 
     <!-- Everyone else: 3 cards per row -->
     <div class="leaders-others">
+
+      <!-- PR above Secretary -->
       <div class="leader card">
-        <img src="assets/images/public-relations.jpg" alt="Public Relations" class="leader-photo" />
+        <img src="assets/images/public-relations.jpg" alt="Public Relations — Jenny Zhu" class="leader-photo" />
         <div class="leader-body">
-          <h3>Public Relations</h3>
-          <p>Leads community outreach, social/content, and partnerships. Owns messaging and external communications.</p>
+          <div class="leader-title">
+            <h3>Public Relations</h3><span class="leader-name">Jenny Zhu</span>
+          </div>
+          <p>Leads outreach, social media, and partnerships. Owns messaging and external communications.</p>
         </div>
       </div>
 
       <div class="leader card">
         <img src="assets/images/blank.png" alt="Secretary" class="leader-photo" />
         <div class="leader-body">
-          <h3>Secretary</h3>
-          <p>Keeps docs, meeting notes, and schedules organized. Maintains member records and compliance.</p>
+          <div class="leader-title">
+            <h3>Secretary</h3>
+          </div>
+          <p>Maintains notes, schedules, and records. Keeps the org organized and compliant.</p>
         </div>
       </div>
 
       <div class="leader card">
         <img src="assets/images/blank.png" alt="Treasurer" class="leader-photo" />
         <div class="leader-body">
-          <h3>Treasurer</h3>
-          <p>Budgets events, manages reimbursements, and tracks dues/sponsorships with transparent reporting.</p>
+          <div class="leader-title">
+            <h3>Treasurer</h3>
+          </div>
+          <p>Manages budgets, reimbursements, and sponsorships with clear and transparent reporting.</p>
         </div>
       </div>
 
       <div class="leader card">
         <img src="assets/images/blank.png" alt="Education Lead" class="leader-photo" />
         <div class="leader-body">
-          <h3>Education Lead</h3>
-          <p>Designs workshops, bootcamps, and study tracks (risk, journaling, setups, platform basics).</p>
+          <div class="leader-title">
+            <h3>Education Lead</h3>
+          </div>
+          <p>Designs workshops and bootcamps on risk, journaling, setups, and platform basics.</p>
         </div>
       </div>
 
       <div class="leader card">
         <img src="assets/images/blank.png" alt="Events Coordinator" class="leader-photo" />
         <div class="leader-body">
-          <h3>Events Coordinator</h3>
-          <p>Plans speakers, challenge weeks, and collabs. Handles logistics and day-of execution.</p>
+          <div class="leader-title">
+            <h3>Events Coordinator</h3>
+          </div>
+          <p>Runs speakers, collabs, and challenge weeks. Handles logistics and day-of execution.</p>
         </div>
       </div>
 
       <div class="leader card">
         <img src="assets/images/blank.png" alt="Risk & Analytics" class="leader-photo" />
         <div class="leader-body">
-          <h3>Risk &amp; Analytics</h3>
-          <p>Builds dashboards, journaling templates, and post-trade reviews to enforce process and edge.</p>
+          <div class="leader-title">
+            <h3>Risk &amp; Analytics</h3>
+          </div>
+          <p>Creates dashboards and review templates to enforce process and sharpen members’ edge.</p>
         </div>
       </div>
     </div>
