--- a/about.html
+++ b/about.html
@@ -5,6 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About • OSU Day Traders</title>
   <link rel="stylesheet" href="css/style.css" />
+  <style>
+    /* Leadership title + name tweaks */
+    .leader-title h3 {
+      font-size: 1rem;       /* smaller so PR fits on one line */
+      margin: 0;
+      line-height: 1.2;
+    }
+    .leader-name {
+      font-weight: 600;
+      font-size: .9rem;
+      color: #555;
+    }
+  </style>
 </head>
 <body>
   <header class="site-header">
@@ -71,10 +84,10 @@
 
       <!-- PR above Secretary -->
       <div class="leader card">
-        <img src="assets/images/public-relations.jpg" alt="Public Relations — Jenny Zhu" class="leader-photo" />
+        <img src="assets/images/public-relations.jpg" alt="PR — Jenny Zhu" class="leader-photo" />
         <div class="leader-body">
           <div class="leader-title">
-            <h3>Public Relations</h3><span class="leader-name">Jenny Zhu</span>
+            <h3>PR — Jenny Zhu</h3>
           </div>
           <p>Leads outreach, social media, and partnerships. Owns messaging and external communications.</p>
         </div>
@@ -96,7 +109,7 @@
           <div class="leader-title">
             <h3>Treasurer</h3>
           </div>
-          <p>Manages budgets, reimbursements, and sponsorships with clear and transparent reporting.</p>
+          <p>Manages budgets, reimbursements, and sponsorships with clear reporting.</p>
         </div>
       </div>
 
