--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <style>
     /* Leadership title + name tweaks */
     .leader-title h3 {
-      font-size: 1rem;       /* smaller so PR fits on one line */
+      font-size: 1rem;
       margin: 0;
       line-height: 1.2;
     }
@@ -16,6 +16,15 @@
       font-weight: 600;
       font-size: .9rem;
       color: #555;
+    }
+
+    /* Smaller font for all cards in the "others" grid */
+    .leaders-others .leader-title h3 {
+      font-size: 0.9rem;
+    }
+    .leaders-others .leader-body p {
+      font-size: 0.85rem;
+      line-height: 1.35;
     }
   </style>
 </head>
